--- a/page7.html
+++ b/page7.html
@@ -44,7 +44,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/r">free bootstrap template</a></section><section class="mbr-section content4 cid-rTh2FN5irM" id="content4-33">
+<section class="engine"><a href="https://mobirise.info/k">develop own website</a></section><section class="mbr-section content4 cid-rTh2FN5irM" id="content4-33">
 
     
 
@@ -140,7 +140,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="aQ93iadtj/4qbcTu56bIqvSEemL40l8ONnmZaiB0sB3KhdIGOQkEbHHdTyiP/8JYe8UXlUBlG9DbNhHPQWrbLPkqUz5+ynthzo/M4DG9p7zthijKL7y5olLSlSLofl4x">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="5ogq++b0WY5eaRiv2Qsgj4XiychIsbFpTgVoFCK9NEustEOUmhAhgEUnCWFVWJmk/LI9UL7X9vRpnkDy6ggPXn9au0KP12mHetoissZNojDlZj+0frAa6shdxJIrzO+G">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -223,7 +223,7 @@
                 </p>
                 <div class="media-container-column" data-form-type="formoid">
                     <!---Formbuilder Form--->
-                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="qMu538z69rRljxZJavEqDYId0gnuhWfs0iHeyytggFb2mRMBdZlmr7RYj1zBaH2J8xIE/btXc41JiH2aAVCpmGIHYh1v4wYmlTmPXEBI7B3XeQhxIk/nptOu/VIEFYff">
+                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="HWx6UPwnHAH2u7nEPJHeLpwzhnv01kE7MMAtP1zXoFGPxDQbizYsOn27bvZreg1YC2FNhgTW3mWpL9DpEDR6FAiTMg7wLXT4ySRw1mpEiGWpJxRSodgjX8mjP4O5PGC4">
                         <div class="row form-inline justify-content-center">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                             <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
