create github pages

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/w">free html5 templates</a></section><section class="features18 popup-btn-cards cid-rTfExRDOI3" id="features18-q">
+<section class="engine"><a href="https://mobirise.info/t">free amp templates</a></section><section class="features18 popup-btn-cards cid-rTfExRDOI3" id="features18-q">
 
     
 
@@ -219,7 +219,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="EP4XPhRGQmjT3dxPv3NfMoyr2V7gf5EVASHKbUQSMN6sCv5r2yVYq7xXcuC0Om9Q8ioA+1Xl/cx0GuHtsVcdmosmEWqZIBkDBxyXEKViWO0K/RxWaprkGhAWyoQE/4HD">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="k0LdwUIWpOe9G3aLKPzDFwcu57Ukr2uJW7eGe0mwTMex3mvriKMG3oQul6HAU+0kRl9+JcjVBGNLldHwvqiYVLrHV/kLayrFjTnPlNJRlWTnlt03OKGFklzn4bbFF6qZ">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -289,7 +289,7 @@
                 </p>
                 <div class="media-container-column" data-form-type="formoid">
                     <!---Formbuilder Form--->
-                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="UwgX4e9vRi8EnXsM7ZGmuELOk33Fy5txbqijU3Be93sLJyQ0WoRHGyuG7iGBX2Bh0r2rqe9f/T5HNjPWzfH4efvtRtLKtW69/KpIcmE8Hp+6MmjlO8GExaJ64OeAt5UU">
+                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="hbhJbwhLJJfJ3GFHXxaPFEEJ9m5o0erZx0udgmv56Zi0WO//ju3Q0rgcgMjclCnNyr64f0io5YGdqsnF/ONCuxwDW/5W42LlNBwUhgtAZ3LMIKXcw4gS1M8HcV6HdzeV">
                         <div class="row form-inline justify-content-center">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                             <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
