--- a/page6.html
+++ b/page6.html
@@ -44,7 +44,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/n">simple web templates</a></section><section class="mbr-section content4 cid-rTh2FttOh3" id="content4-2u">
+<section class="engine"><a href="https://mobirise.info/f">simple web creator</a></section><section class="mbr-section content4 cid-rTh2FttOh3" id="content4-2u">
 
     
 
@@ -140,7 +140,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="DFACTMNc9lgJVynSgXiWZnzpkTcOnbidfXfX7LHxVZreQ2H+S4BAKE402liQKTi2HrEL8Y93MQa3nmfqWLiofVPUTrrISR2D+aAhA14uo0B+zp25xyf12CgB+HjYhQhZ">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="ldVG/wrFQ7oYk1zZQAjuA6aOhZdijSjCQB1UzcE9V6URbBrBpZXK5QxM+vyxv9Kxd0bFiFd3HlGIkMlSqmD3lmEaIuJgT1z4sXbqv7ceg1XYEjAoZzHSCb/BQRtP1Os2">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -223,7 +223,7 @@
                 </p>
                 <div class="media-container-column" data-form-type="formoid">
                     <!---Formbuilder Form--->
-                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="bxWeinPpmKdECe560rtp+rPeLXA7MyPcoASbDQP9vGfBJ/4VWXM/xJ1EoOmxy5zG2WLujT2svSfaVqmDlpwN1K8YVrRgDN8fr7oiZ1H+BC1tggKBGd5gNqTGvOKsHJoT">
+                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="UlThmqA8KNvc01a+0LKFF+zAfDP/IhmA8/Ur/X66YE4f8tH9XKZ0r4i67wZhDM7CdxNX4t0sq1aQnwf5syui4p+ZvJivoxMnkY9Pnu0DVQy05Ejm+n9VzY4d5uWXEmMo">
                         <div class="row form-inline justify-content-center">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                             <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
